Correct logic "Should ContextMenu target the selection?"

If the selection doesn't have focus, it shouldn't be the target
of the context menu.

For example, an _unfocused_ range selection should not be the
context menu's target (the focused element should be the target).

BUG=725005, 725022

Review-Url: https://codereview.chromium.org/2880313002
Cr-Commit-Position: refs/heads/master@{#473842}

Former-commit-id: 48496741476caaedc14e16c9e4e4c90373b6e47e